--- a/style.sass
+++ b/style.sass
@@ -19,5 +19,76 @@ body
   justify-content: center
   align-items: center
   flex-direction: column
+  .facts
+    display: flex
+    gap: 1rem
+    justify-content: space-around
+    align-items: center
+    position: absolute
+    bottom: 0
+    padding: 1rem 0
+    background: rgba(220, 20, 60, 0.7)
+    width: 100%
+    .fact1, .fact2, .fact3
+      text-align: center
+      max-width: 260px
+    .fact-title
+      font-weight: bold
   .subtitle
     font-weight: normal
+
+.centered
+  display: flex
+  justify-content: center
+  align-items: center
+  padding: .2rem 0
+.icon
+  width: 50px
+.divider
+  text-align: center
+.cards
+  padding: 0
+  display: flex
+  justify-content: center
+  align-items: stretch
+  width: calc(100% - 3rem)
+  margin: 0 auto
+  gap: 1rem
+  list-style-type: none
+  .card
+    max-width: 300px
+    text-align: justify
+    background: rgba(220, 20, 60, 0.7)
+    padding: 1rem
+    border-radius: 10px
+    position: relative
+    //z-index: 2
+    &:after
+      content: ''
+      height: 10px
+      width: 100%
+      position: absolute
+      border-radius: 0 0 10px 10px
+      z-index: -1
+      background: crimson
+      bottom: 0
+      left: 0
+      transition: .2s all
+    &:hover:after
+      height: 75%
+      transition: .2s all
+    .card-title
+      text-align: center
+      font-weight: bold
+a, a:visited
+  color: black
+
+.footer
+  background: rgba(220, 20, 60, 0.7)
+  padding: 1rem
+  text-align: center
+
+
+@media screen and (max-width: 1100px)
+  .cards
+    flex-direction: column
